--- a/presentation/section1-introduction.tex
+++ b/presentation/section1-introduction.tex
@@ -28,6 +28,22 @@
         \end{frame}
 
         \begin{frame}
+            \frametitle{Hardware design}
+
+            \begin{itemize}
+                \item The level of abstraction has been lifted already\ldots
+                    \begin{itemize}
+                        \item VHDL in the 1980s
+                    \end{itemize}
+                \item \emph{Functional languages} suggested for hardware design, also since the 1980s
+                    \begin{itemize}
+                        \item First, languages designed \emph{from scratch}
+                        \item Then, embedded in general-purpose functional languages
+                    \end{itemize}
+            \end{itemize}
+        \end{frame}
+
+        \begin{frame}
             \frametitle{Goals of this project}
         \end{frame}
 
